<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSCI571 Homework 9</string>
    <string name="action_settings">Settings</string>
    <string name="search_heading">Search Your Property Here</string>
    <string name="address_label">Address*:</string>
    <string name="city_label">City*:</string>
    <string name="state_label">State*:</string>
    <string name="address_placeholder">Street Address</string>
    <string name="city_placeholder">City</string>
    <string name="state_placeholder">Choose State</string>
    <string name="search_button_label">Search</string>
	<string name="zillow_label">Zillow Logo</string>
	<string name="reqFieldErrMsg">This field is required</string>
	<string name="zillowErrorMsg">No exact match found--Verify that the given address is correct.</string>
	
	<string name="facebook_app_id">1545630032345144</string>
	<string name="facebook_alert_yes">Post Property Details</string>
	<string name="facebook_alert_cancel">Cancel</string>
	<string name="results_name">Results from Zillow</string>
	<string name="property_type">Property Type</string>
	<string name="year_built">Year Built</string>
	<string name="lot_size">Lot Size</string>
	<string name="finished_area">Finished Area</string>
	<string name="bathrooms">Bathrooms</string>
	<string name="bedrooms">Bedrooms</string>
	<string name="tax_assessment_year">Tax Assessment Year</string>
	<string name="tax_assessment">Tax Assessment</string>
	<string name="last_sold_price">Last Sold Price</string>
	<string name="last_sold_date">Last Sold Date</string>
	<string name="zestimate_property_estimate">Zestimate \u00AE Property Estimate as of </string>
	<string name="days_overall_change">30 Days Overall Change</string>
	<string name="all_time_property_range">All Time Property Range</string>
	<string name="rent_zestimate_valuation">Rent Zestimate \u00AE Valuation as of </string>
	<string name="days_rent_change">30 Days Rent Change</string>
	<string name="all_time_rent_range">All Time Rent Range</string>
	
	<string name="next_button">Next</string>
	<string name="prev_button">Previous</string>
	
    <string-array name="state_list">
        <item>@string/state_placeholder</item>
        <item>AK</item>

		<item>AL</item>
		<item>AR</item>
		<item>AZ</item>
		<item>CA</item>
	
		<item>CO</item>
		<item>CT</item>
		<item>DC</item>
		<item>DE</item>
	
		<item>FL</item>
		<item>GA</item>
		<item>HI</item>
		<item>IA</item>
	
		<item>ID</item>
		<item>IL</item>
		<item>IN</item>
		<item>KS</item>
	
		<item>KY</item>
		<item>LA</item>
		<item>MA</item>
		<item>MD</item>
	
		<item>ME</item>
		<item>MI</item>
		<item>MN</item>
		<item>MO</item>
	
		<item>MS</item>
		<item>MT</item>
		<item>NC</item>
		<item>ND</item>
	
		<item>NE</item>
		<item>NH</item>
		<item>NJ</item>
		<item>NM</item>
	
		<item>NV</item>
		<item>NY</item>
		<item>OH</item>
		<item>OK</item>
	
		<item>OR</item>
		<item>PA</item>
		<item>RI</item>
		<item>SC</item>
	
		<item>SD</item>
		<item>TN</item>
		<item>TX</item>
		<item>UT</item>
	
		<item>VA</item>
		<item>VT</item>
		<item>WA</item>
		<item>WI</item>
	
		<item>WV</item>
		<item>WY</item>
    </string-array>
</resources>
